deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-application
  namespace: kasadara
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-application
  template:
    metadata:
      labels:
        app: python-application
    spec:
      containers:
        - name: python-application
          image:  ghcr.io/softwarestacksolutions/python-application:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
