service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: kasadara
spec:
  type: ClusterIP
  selector:
    app: python-application
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
